Prevent photo viewer from overlapping info panes or panels (close #5212)

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -3939,6 +3939,7 @@ img.tile-debug {
 .info-panels {
     display: flex;
     flex-flow: row-reverse wrap-reverse;
+    width: 100%;
     z-index: 1;
     -ms-user-select: element;
 }
